--- a/week12_earthquake_apartment_simulation/Earthquake_Simulation.ipynb
+++ b/week12_earthquake_apartment_simulation/Earthquake_Simulation.ipynb
@@ -22,7 +22,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,31 +351,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]]\n",
+      "[[ 2000. -1000.     0.     0.     0.     0.     0.     0.     0.     0.]\n",
+      " [-1000.  2000. -1000.     0.     0.     0.     0.     0.     0.     0.]\n",
+      " [    0. -1000.  2000. -1000.     0.     0.     0.     0.     0.     0.]\n",
+      " [    0.     0. -1000.  2000. -1000.     0.     0.     0.     0.     0.]\n",
+      " [    0.     0.     0. -1000.  2000. -1000.     0.     0.     0.     0.]\n",
+      " [    0.     0.     0.     0. -1000.  2000. -1000.     0.     0.     0.]\n",
+      " [    0.     0.     0.     0.     0. -1000.  2000. -1000.     0.     0.]\n",
+      " [    0.     0.     0.     0.     0.     0. -1000.  2000. -1000.     0.]\n",
+      " [    0.     0.     0.     0.     0.     0.     0. -1000.  2000. -1000.]\n",
+      " [    0.     0.     0.     0.     0.     0.     0.     0. -1000.  1000.]]\n",
+      "[[ 1.  -0.5  0.   0.   0.   0.   0.   0.   0.   0. ]\n",
+      " [-0.5  1.  -0.5  0.   0.   0.   0.   0.   0.   0. ]\n",
+      " [ 0.  -0.5  1.  -0.5  0.   0.   0.   0.   0.   0. ]\n",
+      " [ 0.   0.  -0.5  1.  -0.5  0.   0.   0.   0.   0. ]\n",
+      " [ 0.   0.   0.  -0.5  1.  -0.5  0.   0.   0.   0. ]\n",
+      " [ 0.   0.   0.   0.  -0.5  1.  -0.5  0.   0.   0. ]\n",
+      " [ 0.   0.   0.   0.   0.  -0.5  1.  -0.5  0.   0. ]\n",
+      " [ 0.   0.   0.   0.   0.   0.  -0.5  1.  -0.5  0. ]\n",
+      " [ 0.   0.   0.   0.   0.   0.   0.  -0.5  1.  -0.5]\n",
+      " [ 0.   0.   0.   0.   0.   0.   0.   0.  -0.5  0.5]]\n",
+      "[[1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "K = np.array([[2*k,-k,0,0,0,0,0,0,0,0],\n",
-    "             [-k,2*k,-k,0,0,0,0,0,0,0],\n",
-    "             [0,-k,2*k,-k,0,0,0,0,0,0],\n",
-    "             [0,0,-k,2*k,-k,0,0,0,0,0],\n",
-    "             [0,0,0,-k,2*k,-k,0,0,0,0],\n",
-    "             [0,0,0,0,-k,2*k,-k,0,0,0],\n",
-    "             [0,0,0,0,0,-k,2*k,-k,0,0],\n",
-    "             [0,0,0,0,0,0,-k,2*k,-k,0],\n",
-    "             [0,0,0,0,0,0,0,-k,2*k,-k],\n",
-    "             [0,0,0,0,0,0,0,0,-k,k]])\n",
-    "M = np.array([[m,0,0,0,0,0,0,0,0,0],\n",
-    "              [0,m,0,0,0,0,0,0,0,0],\n",
-    "              [0,0,m,0,0,0,0,0,0,0],\n",
-    "              [0,0,0,m,0,0,0,0,0,0],\n",
-    "              [0,0,0,0,m,0,0,0,0,0],\n",
-    "              [0,0,0,0,0,m,0,0,0,0],\n",
-    "              [0,0,0,0,0,0,m,0,0,0],\n",
-    "              [0,0,0,0,0,0,0,m,0,0],\n",
-    "              [0,0,0,0,0,0,0,0,m,0],\n",
-    "              [0,0,0,0,0,0,0,0,0,m]])\n",
+    "M = np.zeros((dof,dof))\n",
+    "K = np.zeros((dof,dof))\n",
+    "\n",
+    "for i in np.arange(0, dof):\n",
+    "  for j in np.arange(0, dof):\n",
+    "    if  i == j:\n",
+    "      M[i,j] = m\n",
+    "  for j in np.arange(0, dof-1):\n",
+    "    if i == j:\n",
+    "      K[i,j] = 2*k\n",
+    "      K[dof-1,dof-1] = k\n",
+    "      K[i,j+1] = -k\n",
+    "      K[i+1,j] = -k\n",
+    "print(M)\n",
+    "print(K)\n",
     "C = (c/k)*K\n",
+    "print(C)\n",
+    "\n",
+    "# K = np.array([[2*k,-k,0,0,0,0,0,0,0,0],\n",
+    "#             [-k,2*k,-k,0,0,0,0,0,0,0],\n",
+    "#             [0,-k,2*k,-k,0,0,0,0,0,0],\n",
+    "#             [0,0,-k,2*k,-k,0,0,0,0,0],\n",
+    "#             [0,0,0,-k,2*k,-k,0,0,0,0],\n",
+    "#             [0,0,0,0,-k,2*k,-k,0,0,0],\n",
+    "#             [0,0,0,0,0,-k,2*k,-k,0,0],\n",
+    "#             [0,0,0,0,0,0,-k,2*k,-k,0],\n",
+    "#             [0,0,0,0,0,0,0,-k,2*k,-k],\n",
+    "#             [0,0,0,0,0,0,0,0,-k,k]])\n",
+    "# M = np.array([[m,0,0,0,0,0,0,0,0,0],\n",
+    "#              [0,m,0,0,0,0,0,0,0,0],\n",
+    "#              [0,0,m,0,0,0,0,0,0,0],\n",
+    "#              [0,0,0,m,0,0,0,0,0,0],\n",
+    "#              [0,0,0,0,m,0,0,0,0,0],\n",
+    "#              [0,0,0,0,0,m,0,0,0,0],\n",
+    "#              [0,0,0,0,0,0,m,0,0,0],\n",
+    "#              [0,0,0,0,0,0,0,m,0,0],\n",
+    "#              [0,0,0,0,0,0,0,0,m,0],\n",
+    "#              [0,0,0,0,0,0,0,0,0,m]])\n",
+    "# C = (c/k)*K\n",
     "\n",
     "I = np.identity(dof)\n",
     "#print(\"K\")\n",
@@ -386,7 +450,7 @@
     "#print(\"C\")\n",
     "#print(C)\n",
     "#print(\"I\")\n",
-    "#print(I)"
+    "print(I)"
    ]
   },
   {
@@ -398,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -525,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
